--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bluebird": "^3.5.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-notification-system": "^0.2.17",
     "react-scripts": "1.1.1",
     "web3": "^0.18.2"
   },
