--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^16.2.0",
     "react-notification-system": "^0.2.17",
     "react-scripts": "1.1.1",
+    "semantic-ui-react": "^0.78.3",
     "web3": "^0.18.2"
   },
   "scripts": {
