--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "blockies-identicon": "^0.1.0",
     "bluebird": "^3.5.1",
     "identicon.js": "^2.3.1",
+    "qrcode": "^1.2.0",
+    "qrcode-react": "^0.1.16",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-notification-system": "^0.2.17",
