--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "0x.js": "^0.33.1",
+    "@0xproject/connect": "^0.6.3",
+    "@0xproject/subproviders": "^0.7.0",
     "axios": "^0.18.0",
     "blockies-identicon": "^0.1.0",
     "bluebird": "^3.5.1",
@@ -15,7 +18,8 @@
     "react-scripts": "1.1.1",
     "semantic-ui-css": "^2.3.0",
     "semantic-ui-react": "^0.78.3",
-    "web3": "^0.18.2"
+    "web3": "^0.18.2",
+    "web3-provider-engine": "^13.6.5"
   },
   "scripts": {
     "start": "react-scripts start",
