--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-notification-system": "^0.2.17",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "semantic-ui-css": "^2.3.0",
     "semantic-ui-react": "^0.78.3",
