--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "0x.js": "^0.33.1",
+    "0x.js": "^0.33.6",
     "@0xproject/subproviders": "^0.7.0",
     "axios": "^0.18.0",
     "bignumber.js": "^6.0.0",
@@ -23,8 +23,9 @@
     "semantic-ui-react": "^0.79.0",
     "socket.io-client": "^2.1.0",
     "store": "^2.0.12",
+    "truffle-wallet-provider": "^0.0.5",
     "web3": "0.20.4",
-    "web3-provider-engine": "^13.6.5"
+    "web3-provider-engine": "^13.6.6"
   },
   "scripts": {
     "start": "react-scripts start",
