--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bignumber.js": "^6.0.0",
     "blockies-identicon": "^0.1.0",
     "bluebird": "^3.5.1",
+    "cron": "^1.3.0",
     "formsy-react": "^1.1.4",
     "formsy-semantic-ui-react": "^0.3.2",
     "identicon.js": "^2.3.1",
